# ProxyPOP3

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake
POP3ctl/src/: pop3ctl.c
POP3filter/: README.md
POP3filter/src/: commands.c  log.h  media_types.c  metrics.h  parameters.c  pop3.c  pop3_session.c  pop3_session.h  request.c  request.h  request_parser.c  response_parser.c  response_parser.h  utils.c  utils.h
cmake/: FindCheck.cmake
docs/: secret.txt
mails/: 64kb:2,S
pop3ctl/src/: pop3ctl.c  pop3ctl.h
pop3filter/src/: commands.c  commands.h  external_transformation.c  log.c  log.h  main.c  management.c  management.h  media_types.c  parameters.c  parameters.h  parse_helpers.c  parse_helpers.h  pop3.c  pop3_multi.c  pop3_session.c  pop3_session.h  queue.c  queue.h  request.c  request.h  request_parser.c  request_parser.h  response.c  response_parser.c  response_parser.h  selector.h
src/: CMakeLists.txt  MIMEparser.c  MIMEparser.h  MIMEtree.c  MIMEtree.h  Makefile  buffer.h  cmake_install.cmake  external_transformation.c  external_transformation.h  mail.txt  main.c  main.h  management.c  management.h  media_types.c  media_types.h  mime_chars.h  mime_type.c  netutils.c  netutils.h  parameters.c  parameters.h  parse_helpers.c  parse_helpers.h  parser.c  parser.h  parser_utils.c  parser_utils.h  pop3.c  pop3.h  pop3_session.c  pop3_session.h  queue.c  queue.h  request.c  request.h  request_parser.c  request_parser.h  response.c  (+13 more)
stripMIME/src/: MIMEtree.c  MIMEtree.h  frontier.c  frontier.h  main.c  parser.c  parser.h  stripmime.c  stripmime.h
stripmime/: README.md
stripmime/src/: MIMEtree.c  MIMEtree.h  frontier.c  frontier.h  main.c  mime_msg.c  mime_msg.h  mime_type.c  mime_type.h  parser_utils.c  stack.c  stack.h  stripmime.c  stripmime.h
tests/: CMakeLists.txt  Makefile  check_mime_msg  check_parser  check_parser.c  check_parser_utils  check_parser_utils.c  cmake_install.cmake
